--- a/search.html
+++ b/search.html
@@ -36,12 +36,18 @@
 		<div id="advancedSearchFields" class="advancedSearchContainer">
 			<p id="searchMsg"> </p>
 			<div class="searchFieldContainer">
-				<label for="nameSearch" id="nameSearchLabel">Name </label>
-				<input type="search" id="nameSearch" placeholder="Contact Name" class="searchField"/>
-				<label for="numberSearch" id="numberSearchLabel">Phone </label>
-				<input type="search" id="numberSearch" placeholder="Contact Number" class="searchField"/>
-				<label for="emailSearch" id="emailSearchLabel">Email </label>
-				<input type="search" id="emailSearch" placeholder="Contact Email" class="searchField"/>
+				<div class="searchFieldGroup">
+					<label for="nameSearch" class="searchLabel">Name</label>
+					<input type="search" id="nameSearch" placeholder="Contact Name" class="searchField" />
+				</div>
+				<div class="searchFieldGroup">
+					<label for="numberSearch" class="searchLabel">Phone</label>
+					<input type="search" id="numberSearch" placeholder="Contact Number" class="searchField" />
+				</div>
+				<div class="searchFieldGroup">
+					<label for="emailSearch" class="searchLabel">Email</label>
+					<input type="search" id="emailSearch" placeholder="Contact Email" class="searchField" />
+				</div>
 			</div>
 		</div>
 		<select id="searchOption">
