Fixed alignment of warning messages on login/register page

--- a/index.html
+++ b/index.html
@@ -17,37 +17,37 @@
 	<span id="inner-title">Log in</span>
 	<form id="loginForm">
 		<div class="formFieldGroup">
-			<span id="firstErrText"></span>
+			<span id="firstErrText"><br/></span>
 			<label for="registerFirstName" id="regFirstNameLabel"></label>
 			<input id="registerFirstName" type="text" placeholder="First Name" class="registerField" />
 		</div>
 	
 		<div class="formFieldGroup">
-			<span id="lastErrText"></span>
+			<span id="lastErrText"><br/></span>
 			<label for="registerLastName" id="regLastNameLabel"></label>
 			<input id="registerLastName" type="text" placeholder="Last Name" class="registerField" />
 		</div>
 	
 		<div class="formFieldGroup">
-			<span id="usernameErrText"></span>
+			<span id="usernameErrText"><br/></span>
 			<label for="loginName" id="loginNameLabel">Username </label>
 			<input type="text" id="loginName" placeholder="Username" class="loginField" />
 		</div>
 	
 		<div class="formFieldGroup">
-			<span id="passwordErrText"></span>
+			<span id="passwordErrText"><br/></span>
 			<label for="loginPassword" id="loginPasswordLabel">Password </label>
 			<input type="password" id="loginPassword" placeholder="Password"/>
 		</div>
 	
 		<div class="formFieldGroup">
-			<span id="phoneErrText"></span>
+			<span id="phoneErrText"><br/></span>
 			<label for="registerPhone" id="regPhoneLabel"></label>
 			<input id="registerPhone" type="text" placeholder="Phone number (xxx-xxx-xxxx)" class="registerField">
 		</div>
 	
 		<div class="formFieldGroup">
-			<span id="emailErrText"></span>
+			<span id="emailErrText"><br/></span>
 			<label for="registerEmail" id="regEmailLabel"></label>
 			<input id="registerEmail" type="text" placeholder="Email (someone@example.com)" class="registerField">
 		</div>
